Editable/ThoughtAnnotation: Fix superscript positioning in table column 1.
This commit reverts the extended background color highlight zone as it messed up superscript positioning.

The inline marginLeft that was added in 3e49206 is moved into an external stylesheet.

--- a/src/App.css
+++ b/src/App.css
@@ -607,14 +607,15 @@ a.text-link {
   top: 0.3em;
 }
 
-.child .editable {
+.child .editable,
+.editable-annotation-text {
   /* Add some padding-right for increased click area. */
   /* Add some padding-left otherwise caret is invisible on empty elements. */
   /* Cannot use padding-top on editable, as clicking it causes the selection to go to the beginning. */
   /* Cannot use padding-bottom on editable, as clicking it causes the selection to go to the end. */
   padding: 0 1em 0 5px;
   /* slide editable up so that it overlaps with the previous thought, ensuring there is no dead click zone from clip-path */
-  margin: -0.5px -1em 0 -5px;
+  margin: -0.5px -1em 0 calc(1em - 18px);
   /* create stacking order to position above thought-annotation so that function background color does not mask thought */
   position: relative;
   /* Prevent the selection from being incorrectly set to the beginning of the thought when the top edge is clicked, and the end of the thought when the bottom edge is clicked. Instead, we want the usual behavior of the selection being placed near the click. */
